--- a/meine-vue-app/package.json
+++ b/meine-vue-app/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.1.7"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
