--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -19,5 +19,5 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm install
-      - name: Run Tests
-        run: npm run test:unit
+      - name: Build Project
+        run: npm run build
